Latest blogpost update

--- a/en/writeups/osint-geoint/osint-flight-tracking-challenge/index.html
+++ b/en/writeups/osint-geoint/osint-flight-tracking-challenge/index.html
@@ -356,7 +356,7 @@ Modify Date                     : 2020:08:30 18:00:59.210329
 
 <p>The three remaining airlines all have corresponding colours. But, what about their routes ?</p>
 
-<p>The excellent flight tracking tool <a href="https://www.flightradar24.com" target="_blank">FlightRadard24</a>) gives the opportunity to visualize, for a given airline, the entire route network. Thus, by showing all routes for the three airlines, we can also discard <strong>Czech Airlines</strong> and <strong>Austrian Airlines</strong> because they don&rsquo;t have any flight to South-Est from France.</p>
+<p>The excellent flight tracking tool <a href="https://www.flightradar24.com" target="_blank">FlightRadard24</a> gives the opportunity to visualize, for a given airline, the entire route network. Thus, by showing all routes for the three airlines, we can also discard <strong>Czech Airlines</strong> and <strong>Austrian Airlines</strong> because they don&rsquo;t have any flight to South-Est from France.</p>
 
 <p><center><img src="/img/writeups/osint_geoint/flight-challenge/AUSTRIAN_ROUTES.jpg" alt="Austrian Airlines routes" class="imgSize"/></center>
 <em class="imageCaption">Fig. 9 : Austrian Airlines routes</em></p>
